ModiDB color fix + label realignment + minor change

--- a/src/components/ProteinViewer/style.css
+++ b/src/components/ProteinViewer/style.css
@@ -53,7 +53,7 @@
 }
 
 .centered-label {
-  margin-top: 6px;
+  margin-top: 4px;
 }
 
 .sequence-conservation {
